Fix home background color, fix signup and login width, add 1px to app container to test mobile broswer searchbar collapse

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,8 @@ h1 {
 ____________________________ */
 
 .formContainer {
-  width: 400px;
+  max-width: 400px;
+  min-width: 375px;
   padding: 2.6rem 2.6rem;
 }
 
@@ -66,6 +67,7 @@ Form > input[type="number"],
 Form > input[type="file"],
 .form-control,
 .MainSearchBar {
+  width: 380px;
   background-color: white;
   padding: 0.65rem 0.5rem;
   font-size: 1rem;
@@ -278,9 +280,9 @@ button {
 }
 
 .loginForm button {
-  background-color: var(--pink-focused) !important;
+  background-color: var(--pink-focused);
 }
 
 .loginForm a {
-  color: black !important;
+  color: black;
 }
