--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -111,7 +111,6 @@
 /* Videos container */
 .videos-container {
   padding: 20px;
-  background-color: aqua;
 }
 
 /* Tablet */
